--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#fff" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Lista de tarefas"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -15,6 +15,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Você precisa habilitar o JavaScript para executar esta aplicação.</noscript>
     <div id="root"></div>
   </body>
 </html>
